Wrap .content in another div to hopefully fix scroll issue

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -23,15 +23,22 @@ header a {
   bottom: 0;
 }
 
-.content {
+.content-wrapper {
   flex-grow: 1;
+  overflow: hidden;
+  margin: 0.5em;
+  padding: 0;
+  background: rgba( 255, 255, 255, 0.5 );
+  border-radius: 2px;
+}
+.content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   overflow-x: none;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
-  margin: 0.5em;
-  padding: 0 0.75em 45px 0.75em;
-  background: rgba( 255, 255, 255, 0.5 );
-  border-radius: 2px;
+  padding: 0 0.75em 70px 0.75em;
 }
 
 h2, h3 {
